--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,9 @@
       <h1 class="site-title">{{ site.title }}</h1>
       <nav class="nav">
         <a href="{{ '/' | relative_url }}">Inicio</a>
-        <a href="{{ '/techie.html' | relative_url }}">Techie</a>
-        <a href="{{ '/geek.html' | relative_url }}">Geek</a>
-        <a href="{{ '/about.html' | relative_url }}">About</a>
+        <a href="{{ '/techie/' | relative_url }}">Techie</a>
+        <a href="{{ '/geek/' | relative_url }}">Geek</a>
+        <a href="{{ '/about/' | relative_url }}">About</a>
       </nav>
     </header>
 
