--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -65,11 +65,11 @@ layout: default
     <input type="hidden" name="_subject" value="Nuevo comentario en {{ page.title }}">
     <input type="hidden" name="_template" value="table">
     <input type="hidden" name="_captcha" value="false">
-    <input type="hidden" name="_next" value="{{ site.url }}{{ page.url }}#comentarios">
+    <input type="hidden" name="_next" value="https://jromano743.github.io/jromano743/{{ page.url }}#comentarios">
 
     <!-- Contexto del post -->
     <input type="hidden" name="post" value="{{ page.title }}">
-    <input type="hidden" name="url" value="{{ site.url }}{{ page.url }}">
+    <input type="hidden" name="url" value="https://jromano743.github.io/jromano743/{{ page.url }}">
 
     <label class="comment-form__field">
       <span class="comment-form__label">Nombre o Nickname</span>
