--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,9 @@
   <div class="page">
 
     <header class="header">
-      <h1 class="site-title">{{ site.title }}</h1>
+      <a href="{{ '/' | relative_url }}">
+        <h1 class="site-title">{{ site.title }}</h1>
+      </a>
       <nav class="nav">
         <a href="{{ '/' | relative_url }}">Inicio</a>
         <a href="{{ '/techie/' | relative_url }}">Techie</a>
